feat: lock support + v2 overhaul (#28)